[package]
name = "yaml-to-json"
version = "0.1.0"
edition = "2021"

[dependencies]
atty = "0.2.14"
clap = { version = "3.2", features = ["derive"] }
colorize_json = { path = "../colorize_json" }
serde = "1.0.137"
serde_json = "1"
serde_yaml = "0"
termcolor = "1.1.3"

[[bin]]
name = "y2j"
path = "src/main.rs"
